@@ -138,12 +138,12 @@ $result_texts{'style_not_closed_in_block_command'} = 'cartouche in code
 
 $result_errors{'style_not_closed_in_block_command'} = [
   {
-    'error_line' => ':2: @code missing close brace
+    'error_line' => ':2: @end cartouche seen before @code closing brace
 ',
     'file_name' => '',
     'line_nr' => 2,
     'macro' => '',
-    'text' => '@code missing close brace',
+    'text' => '@end cartouche seen before @code closing brace',
     'type' => 'error'
   }
 ];
