@@ -635,12 +635,12 @@ $result_menus{'style_not_closed_no_newline_root_commands'}{'menu_child'}{'menu_u
 
 $result_errors{'style_not_closed_no_newline_root_commands'} = [
   {
-    'error_line' => ':8: @code missing close brace
+    'error_line' => ':8: @node seen before @code closing brace
 ',
     'file_name' => '',
     'line_nr' => 8,
     'macro' => '',
-    'text' => '@code missing close brace',
+    'text' => '@node seen before @code closing brace',
     'type' => 'error'
   },
   {
@@ -653,12 +653,12 @@ $result_errors{'style_not_closed_no_newline_root_commands'} = [
     'type' => 'warning'
   },
   {
-    'error_line' => ':12: @code missing close brace
+    'error_line' => ':12: @bye seen before @code closing brace
 ',
     'file_name' => '',
     'line_nr' => 12,
     'macro' => '',
-    'text' => '@code missing close brace',
+    'text' => '@bye seen before @code closing brace',
     'type' => 'error'
   },
   {
